[gd_scene load_steps=12 format=3 uid="uid://cef5dc2a1uoer"]

[ext_resource type="Script" uid="uid://yfyyy8peo5lq" path="res://scenes/pagina_05_conteudo.gd" id="1_taqvv"]
[ext_resource type="Texture2D" uid="uid://duqvqtg5wcev1" path="res://assets/imagens/5.png" id="2_taqvv"]
[ext_resource type="Texture2D" uid="uid://d2bt2wnsw2u40" path="res://assets/imagens/icone_som_ligado.png" id="3_qg5qn"]
[ext_resource type="Texture2D" uid="uid://b7byaxhjc2d1x" path="res://assets/imagens/piramide (1).png" id="4_m1l18"]
[ext_resource type="Texture2D" uid="uid://bfqamgv3juoyg" path="res://assets/imagens/linha.png" id="5_dij2q"]
[ext_resource type="Texture2D" uid="uid://bolj2nuao1vy1" path="res://assets/imagens/ChatGPT Image 25_11_2025, 20_50_55.png" id="6_5fix0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m1l18"]
size = Vector2(14, 432.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m1l18"]
radius = 139.0
height = 278.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dij2q"]
size = Vector2(416, 32)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_m1l18"]
friction = 2.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5fix0"]
size = Vector2(277, 430)

[node name="Pagina05Conteudo" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_taqvv")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 769.0
offset_bottom = 1024.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_taqvv")

[node name="BotaoRetroceder" type="Button" parent="TextureRect"]
light_mask = 0
visibility_layer = 0
layout_mode = 0
offset_left = 18.0
offset_top = 915.0
offset_right = 74.0
offset_bottom = 967.0

[node name="BotaoAvancar" type="Button" parent="TextureRect"]
light_mask = 0
visibility_layer = 0
layout_mode = 0
offset_left = 701.0
offset_top = 915.0
offset_right = 751.0
offset_bottom = 963.0
text = "
"

[node name="BotaoSom" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 686.0
offset_top = 13.0
offset_right = 741.0
offset_bottom = 73.0
icon = ExtResource("3_qg5qn")
flat = true

[node name="ParedeEsquerda" type="StaticBody2D" parent="."]
position = Vector2(70, 111)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParedeEsquerda"]
position = Vector2(161, 263)
shape = SubResource("RectangleShape2D_m1l18")

[node name="MundoDaFisica" type="Node2D" parent="."]
position = Vector2(0, 6)

[node name="Pivo" type="StaticBody2D" parent="MundoDaFisica"]
position = Vector2(35, 156)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MundoDaFisica/Pivo"]
position = Vector2(465, 720)
shape = SubResource("CapsuleShape2D_m1l18")

[node name="SpritePivo" type="Sprite2D" parent="MundoDaFisica/Pivo"]
position = Vector2(461.5, 704.25006)
scale = Vector2(1.6953125, 1.6367185)
texture = ExtResource("4_m1l18")

[node name="Prancha" type="RigidBody2D" parent="MundoDaFisica"]
position = Vector2(70, 105)
mass = 1.5
linear_damp = 4.0

[node name="SpritePrancha" type="Sprite2D" parent="MundoDaFisica/Prancha"]
position = Vector2(435, 647)
scale = Vector2(1.5859375, 1.3945313)
texture = ExtResource("5_dij2q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MundoDaFisica/Prancha"]
position = Vector2(430, 649)
shape = SubResource("RectangleShape2D_dij2q")

[node name="Leo" type="RigidBody2D" parent="MundoDaFisica/Prancha"]
position = Vector2(454, 543)
mass = 5.0
physics_material_override = SubResource("PhysicsMaterial_m1l18")
linear_damp = 1.0

[node name="SpriteLeo" type="Sprite2D" parent="MundoDaFisica/Prancha/Leo"]
position = Vector2(-28, -133)
scale = Vector2(0.372, 0.372)
texture = ExtResource("6_5fix0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MundoDaFisica/Prancha/Leo"]
position = Vector2(-26, -130)
shape = SubResource("RectangleShape2D_5fix0")

[node name="Articulacao" type="PinJoint2D" parent="MundoDaFisica"]
position = Vector2(497, 754)
node_a = NodePath("../Pivo")
node_b = NodePath("../Prancha")

[node name="ParedeDireita" type="StaticBody2D" parent="MundoDaFisica"]
position = Vector2(687, 398)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MundoDaFisica/ParedeDireita"]
position = Vector2(66, 258)
shape = SubResource("RectangleShape2D_m1l18")

[node name="TimerEquilibrio" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="LabelFeedback" type="Label" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 669.0
offset_right = 254.0
offset_bottom = 833.0
theme_override_colors/font_color = Color(0.74632335, 0.08580046, 1.92523e-07, 1)
theme_override_font_sizes/font_size = 19
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="TextureRect/BotaoRetroceder" to="." method="_on_botao_retroceder_pressed"]
[connection signal="pressed" from="TextureRect/BotaoAvancar" to="." method="_on_botao_avancar_pressed"]
[connection signal="pressed" from="TextureRect/BotaoSom" to="." method="_on_botao_som_pressed"]
[connection signal="timeout" from="TimerEquilibrio" to="." method="_on_timer_equilibrio_timeout"]
